--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: -4%;"> <!-- Adjusted inline style to decrease margin-right -->
-        <section class="blog py-4" id="Our Services" style="margin-right: 0%;"> <!-- Adjusted margin-right -->
+    <div class="col-lg-5" style="margin-right: 0%; margin-left: 4%;"> <!-- Adjusted inline style to include margin-left -->
+        <section class="blog py-4" id="Our Services" style="margin-right: 4%;"> <!-- Adjusted margin-right -->
             <div class="container py-md-5" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
-                <div class="container py-md-4">
+		        <div class="container py-md-4">
                     <h3 class="heading mb-sm-5 mb-4 text-right">Our Services</h3>
                     <div class="row core-grids justify-content-right">
                         <div class="draggable-box">
