--- a/index.html
+++ b/index.html
@@ -220,28 +220,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: 0%; margin-left: 4%;"> <!-- Adjusted inline style to include margin-left -->
-        <section class="blog py-4" id="Our Services" style="margin-right: 4%;"> <!-- Adjusted margin-right -->
+    <div class="col-lg-5" style="margin-right: 0%;"> <!-- Adjusted inline style to remove margin-right -->
+        <section class="blog py-4" id="Our Services" style="margin-right: 0%;"> <!-- Adjusted margin-right -->
             <div class="container py-md-5" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
-		        <div class="container py-md-4">
-                    <h3 class="heading mb-sm-5 mb-4 text-right">Our Services</h3>
+		    <div class="container py-md-4">
+                    <h3 class="heading mb-sm-5 mb-4 text-right"> Our Services</h3>
                     <div class="row core-grids justify-content-right">
-                        <div class="draggable-box">
-                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
-                            <a href="upload.html">    
-                                <div class="text">
-                                    <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
-                                    <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-                                </div>
-                            </a>
+                <div class="draggable-box">
+                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
+                    <a href="upload.html">    
+                        <div class="text">
+                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
+                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
     </div>
 </body>
-
     <!-- //Products & Services -->
 
     
