--- a/index.html
+++ b/index.html
@@ -220,12 +220,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: 0%;"> <!-- Adjusted inline style to remove margin-right -->
-        <section class="blog py-4" id="Our Services" style="margin-right: 0%;"> <!-- Adjusted margin-right -->
-            <div class="container py-md-5" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
-		    <div class="container py-md-4">
-                    <h3 class="heading mb-sm-5 mb-4 text-right"> Our Services</h3>
-                    <div class="row core-grids justify-content-right">
+    <div class="col-lg-5" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
+        <section class="blog py-4" id="Our Services" style="margin-left: 20px;">
+            <div class="container py-md-5" style="margin-top: 40px;">
+                <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
@@ -238,7 +236,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </section>
     </div>
-</body>
+</body> 
     <!-- //Products & Services -->
 
     
