--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       });
     </script>
 </head>
-<body>
+<body style="margin-top: -30px;"> <!-- Adjusted margin-top of the body element -->
     <div class="col-lg-5" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
-        <section class="blog py-4" id="Our Services" style="margin-left: 20px;">
-            <div class="container py-md-5" style="margin-top: 40px;">
+        <section class="blog py-4" id="Our Services" style="margin-left: 20px; margin-top: -20px;"> <!-- Adjusted margin-top -->
+            <div class="container py-md-5" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
                 <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
@@ -236,7 +236,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </section>
     </div>
-</body> 
+</body>
+
     <!-- //Products & Services -->
 
     
