--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body style="margin-top: -30px;"> <!-- Adjusted margin-top of the body element -->
-    <div class="col-lg-5" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
-        <section class="blog py-4" id="Our Services" style="margin-left: 20px; margin-top: -20px;"> <!-- Adjusted margin-top -->
-            <div class="container py-md-5" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
-                <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
+    <div class="col-lg-4" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
+		    <div class="col-lg-5">
+            <section class="blog py-5" id="Our Services">
+                <div class="container py-md-6" style="margin-top: 20px;">
+                <h3 class="heading mb-sm-4 mb-3 text-center"> Our Services </h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
