--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home" style="color: #333;">Home</a> <!-- Applied color -->
+                    <a class="nav-link" href="#home">Home</a> <!-- Applied color -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#About Us">About Us</a>
