--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Skin Disease Prediction</title>
+    <title>SKIN DISEASE ANALYSIS</title>
     <!-- for-mobile-apps -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -56,37 +56,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Styling</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Custom CSS to override Bootstrap styles */
-        .navbar {
-            background-color: white; /* Set background color to white */
-        }
-
-        .navbar-nav .nav-link {
-            color: #343a40; /* Set default link color to white */
-        }
-
-        .navbar-nav .nav-item.active .nav-link {
-            color: #fff; /* Set active link color to white */
-            background-color: #343a40; /* Set active link background color to white */
-        }
-    </style>
-</head>
-<body>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar with Button Spacing</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Custom CSS to add spacing between buttons */
         .navbar-nav .nav-item .nav-link {
-            color: skyblue; /* Set link color to sky blue */
+            color: blue; /* Set link color to blue */
             margin-bottom: 10px; /* Add margin bottom to create space between buttons */
         }
     </style>
@@ -105,7 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <a class="nav-link" href="#About Us">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Our Services">Our Services</a>
+                    <a class="nav-link" href="#Services">Services</a>
                 </li>
             </ul>
         </div>
@@ -128,7 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="overlay">
 			<div class="container">
                       <div class="w3layouts-banner-info text-Center">
-                          <h3 class="text-wh" style="margin-top: -100px; color: white;">Skin Disease Diagnosis</h3>
+                          <h3 class="text-wh" style="margin-top: -100px; color: white;">SKIN DISEASE ANALYSIS</h3>
                             
                                <h4 class="text-wh mx-auto my-4" style="margin-right: 0; margin-left: -100px; color: white;"><b>Acquire information about your skin problem.</b></h4>
 
@@ -150,13 +126,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
     <div class="row">
         <div class="col-lg-6">
-            <section class="core-value py-5" id="About Us">
+            <section class="core-value py-5; color: blue;" id="About Us">
                 <div class="container py-md-4">
-                    <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
+                    <h3 class="heading mb-sm-5 mb-4 text-left; color: blue;"> About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
-                           <h3 class="mt-4" style="color: #000000; margin-left: -70px; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
-                           <p class="mt-3" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+                           <h3 class="mt-1" style="color: #000000; margin-left: -70px; font-weight: bold;">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
+                           <p class="mt-1" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
 
                         </div>
                     </div>
@@ -220,15 +196,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body style="margin-top: -10px;"> <!-- Adjusted margin-top of the body element -->
     <div class="col-lg-4" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
 		    <div class="col-lg-5">
-            <section class="blog py-5" id="Our Services">
+            <section class="blog py-5; color: blue;" id="Services">
                 <div class="container py-md-6" style="margin-top: 20px;">
-                <h3 class="heading mb-sm-4 mb-3 text-center"> Our Services </h3>
+                <h3 class="heading mb-sm-4 mb-3 text-center; color: blue;"> Services </h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
                         <div class="text">
                             <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
-                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                            <p style="font-family: 'Times New Roman', Times, serif;font-weight: bold;color: black;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
                     </a>
                 </div>
