--- a/index.html
+++ b/index.html
@@ -131,13 +131,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <h3 class="heading mb-sm-5 mb-4 text-left about-us-heading">About Us</h3>
             <div class="row core-grids justify-content-left">
                 <div class="col-lg-12 core-left">
-                    <h3 class="mt-1" style="color: #000000; font-weight: bold;">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                    <p class="mt-1">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+                    <div class="drag-like-table">
+    <div class="drag-like-table-cell">
+        <h3 class="mt-1 drag-like-title">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.</h3>
+        <p class="mt-1 drag-like-paragraph">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
                 </div>
             </div>
         </div>
     </section>
         </div>
+    </div>
+</div>
        <div class="col-lg-5">
 	<div class="row match-height">
            <head>
@@ -197,13 +201,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    <div class="col-lg-5">
            <section class="blog py-5" id="Services">
     <div class="container py-md-6" style="margin-top: 20px;">
-        <h3 class="heading mb-sm-4 mb-3 text-center services-heading">Services</h3>
+        <h3 class="heading mb-sm-4 mb-3 text-center services-heading" style="margin-right: 10px;">Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
                         <div class="text">
                             <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
-                            <p style="font-family: 'Sans-Serif', serif;color: black;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                            <p style="color: black;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
                     </a>
                 </div>
