--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		    <div class="col-lg-5">
            <section class="blog py-5" id="Services">
     <div class="container py-md-6" style="margin-top: 20px;">
-        <h3 class="heading mb-sm-4 mb-3 text-center services-heading" style="margin-right: 10px;">Services</h3>
+        <h3 class="heading mb-sm-4 mb-3 text-center services-heading">Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
