--- a/index.html
+++ b/index.html
@@ -62,32 +62,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <style>
         /* Custom CSS to add spacing between buttons */
         .navbar-nav .nav-item .nav-link {
-            color: blue; /* Set link color to blue */
+            color: skyblue; /* Set link color to sky blue */
             margin-bottom: 10px; /* Add margin bottom to create space between buttons */
         }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-white">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="#home" style="font-size: 18px;">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#About Us" style="font-size: 18px;">About Us</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#Services" style="font-size: 18px;">Services</a>
-        </li>
-    </ul>
-</div>
-    </div>
-</nav>
-
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#home">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#About Us">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Our Services">Our Services</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Bootstrap JS (optional) -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
@@ -196,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       });
     </script>
 </head>
-<body style="margin-top: -90px;"> <!-- Adjusted margin-top of the body element -->
+<body style="margin-top: -30px;"> <!-- Adjusted margin-top of the body element -->
     <div class="col-lg-4" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
         <div class="col-lg-5">
             <section class="blog py-5" id="Services">
