--- a/index.html
+++ b/index.html
@@ -125,15 +125,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="row">
         <div class="col-lg-6">
             <section class="core-value py-5" id="About Us">
-    <div class="container py-md-4">
-        <h3 class="heading mb-sm-5 mb-4 text-left about-us-heading">About Us</h3>
-        <div class="row core-grids justify-content-left">
-            <div class="col-lg-12 core-left">
-                <!-- Content here -->
+        <div class="container py-md-4">
+            <h3 class="heading mb-sm-5 mb-4 text-left">About Us</h3>
+            <div class="row core-grids justify-content-left">
+                <div class="col-lg-12 core-left">
+                    <h3 class="mt-1" style="color: #000000; font-weight: bold;">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
+                    <p class="mt-1">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
 
         </div>
         <div class="col-lg-5">
