--- a/index.html
+++ b/index.html
@@ -121,22 +121,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //Banner -->
 
     <!-- Core Values -->
-    <div class="container">
-    <div class="row">
-        <!-- About Us Section -->
-        <div class="col-lg-6">
-            <section class="core-value py-5" id="About Us">
-                <div class="container py-md-4">
-                    <h3 class="heading mb-sm-5 mb-4 text-left">About Us</h3>
-                    <div class="row core-grids justify-content-left">
-                        <div class="col-lg-12 core-left">
-                            <h3 class="mt-1" style="color: #000000; font-weight: bold;">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                            <p class="mt-1">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+    <body style="margin-top: -30px;"> <!-- Adjusted margin-top of the body element -->
+    <div class="col-lg-5" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
+        <section class="blog py-4" id="Our Services" style="margin-left: 20px; margin-top: -20px;"> <!-- Adjusted margin-top -->
+            <div class="container py-md-5" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
+                <h3 class="heading mb-sm-5 mb-4 text-center">Our Services</h3>
+                <div class="draggable-box">
+                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
+                    <a href="upload.html">    
+                        <div class="text">
+                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
+                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
-                    </div>
+                    </a>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+    </div>
+</body>
         <!-- Our Services Section -->
         <div class="col-lg-6">
             <section class="blog py-4" id="Our Services">
