--- a/index.html
+++ b/index.html
@@ -69,33 +69,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     }
   </style>
 
-  <div class="container">
-    <a class="navbar-brand" href="#home"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#home" style="background-color: #87CEEB;">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#About Us" style="background-color: #87CEEB;">About Us
-            <span class="sr-only"></span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#Our Services" style="background-color: #87CEEB;">Our Services
-            <span class="sr-only"></span>
-          </a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-white bg-white">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#home" style="color: #333;">Home</a> <!-- Applied color -->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#About Us">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Our Services">Our Services</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
-
 </nav>
+
 
 
     <!-- Banner -->
@@ -120,8 +114,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             
                             </div>
 
-
-
                         </div>
                     </div>
                 </div>
@@ -133,9 +125,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
     <div class="row">
         <div class="col-lg-6">
-            <section class="core-value py-5" id="About Us">
-                <div class="container py-md-4">
-                    <h3 class="heading mb-sm-5 mb-4 text-left"> About Us</h3>
+           <section class="core-value py-5" id="about_us">
+    <div class="container py-md-4">
+        <h3 class="heading mb-sm-5 mb-4 text-left" style="color: blue;">About Us</h3>
                     <div class="row core-grids justify-content-left">
                         <div class="col-lg-12 core-left">
                            <h3 class="mt-4" style="color: #000000; margin-left: -70px; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
@@ -146,10 +138,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             </section>
         </div>
-        <head>
+        <div class="col-lg-5">
+	<div class="row match-height">
+           
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draggable Box</title>
+    <style>
+      /* Custom CSS for adjusting the position */
+      .col-lg-5 {
+        margin-left: auto; /* Move the column to the right */
+      }
+    </style>
     <style>
       .draggable-box {
         border: 2px solid #ccc;
@@ -191,16 +191,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
       });
     </script>
-</head>
-<body>
-    <div class="draggable-box">
-      <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
-      <div class="text">
-        <h4 style="margin-left: 60px;">SKIN DISEASE DETECTION</h4>
-        <p class="mt-4" style="margin-left: 60px;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-      </div>
+
+ <!-- Adjusted margin-top of the body element -->
+    <div class="col-lg-4" style="margin-left: 5%;"> <!-- Added inline style for additional margin -->
+		    <div class="col-lg-5">
+    <section class="blog py-5" style="color: blue;" id="Services">
+        <div class="container py-md-6" style="margin-top: 20px;">
+            <h3 class="heading mb-sm-4 mb-3 text-center" style="color: blue;">Services</h3>
+            <div class="draggable-box">
+                    <img src="SKIN%20DISEASE%20ANALYSIS_files/is-it-vitiligo.jpg" alt="Placeholder Image">
+                    <a href="https://mankunssanil.github.io/skin-disease-prediction2/upload.html">    
+                        <div class="text" style="text-align: center;">
+                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
+                            <p style="font-family: 'Calibri', Times, serif;color: black;text-align: left;">Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                        </div>
+
+                    </a>
+                </div>
+            </div>
+        </section>
     </div>
-</body>
 
     <!-- //Products & Services -->
 
