--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- Core Values -->
 	    <div class="container">
 	    <div class="row">
-	        <div class="col-lg-5">
-	            <section class="core-value py-4" id="About Us">
-	    <div class="container py-md-4">
-	        <h3 class="heading mb-sm-4 mb-3 text-left about-us-heading">About Us</h3>
+	        <div class="col-lg-4">
+	            <section class="core-value py-3" id="About Us">
+	    <div class="container py-md-3">
+	        <h3 class="heading mb-sm-3 mb-2 text-left about-us-heading">About Us</h3>
 	        <div class="row core-grids justify-content-left">
 	            <div class="col-lg-12 core-left">
-                           <h3 class="mt-3" style="color: #000000; margin-left; font-weight: bold;">ADVANCING DERMATOLOGY, ENRICHING LIVES, IDENTIFYING SKIN DISEASES.</h3>
+                           <h3 class="mt-2" style="color: #000000; margin-left;">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
                            <p class="mt-1" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
 
                         </div>
@@ -181,10 +181,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: -5%;"> <!-- Adjusted inline style to move 2 lines right -->
-        <section class="blog py-4" id="Services" style="margin-right: -5%;">
-    <div class="container py-md-5" style="margin-top: 20px;">
-        <h3 class="heading mb-sm-5 mb-3 text-center" style="color: blue;">Services</h3>
+    <div class="col-lg-4" style="margin-right: 0%;"> <!-- Adjusted inline style to move 2 lines right -->
+        <section class="blog py-3" id="Services" style="margin-right: 0%;">
+    <div class="container py-md-3" style="margin-top: 20px;">
+        <h3 class="heading mb-sm-4 mb-2 text-center" style="color: blue;">Services</h3>
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
