--- a/index.html
+++ b/index.html
@@ -181,22 +181,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-4" style="margin-right: 0%;"> <!-- Adjusted inline style to move 2 lines right -->
-        <section class="blog py-3" id="Services" style="margin-right: 0%;">
-    <div class="container py-md-3" style="margin-top: 20px;">
-        <h3 class="heading mb-sm-4 mb-2 text-center" style="color: blue;">Services</h3>
-                <div class="draggable-box">
-                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
-                    <a href="upload.html">    
-                        <div class="text">
-                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
-                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+    <div class="col-lg-5" style="margin-right: 0%; margin-left: -3%;"> <!-- Adjusted inline style to include margin-left -->
+        <section class="blog py-4" id="Services" style="margin-right: 0%;"> <!-- Adjusted margin-right -->
+            <div class="container py-md-4" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
+		        <div class="container py-md-3">
+                    <h3 class="heading mb-sm-3 mb-2 text-right">Services</h3>
+                    <div class="row core-grids justify-content-right">
+                        <div class="draggable-box">
+                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
+                            <a href="upload.html">    
+                                <div class="text">
+                                    <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
+                                    <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                                </div>
+                            </a>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
+</body>
+
 </body>
     <!-- //Products & Services -->
 
