--- a/index.html
+++ b/index.html
@@ -116,22 +116,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //Banner -->
 
     <!-- Core Values -->
-	    <div class="container">
-	    <div class="row">
-	        <div class="col-lg-4">
-	            <section class="core-value py-3" id="About Us">
-	    <div class="container py-md-3">
-	        <h3 class="heading mb-sm-3 mb-2 text-left about-us-heading">About Us</h3>
-	        <div class="row core-grids justify-content-left">
-	            <div class="col-lg-12 core-left">
-                           <h3 class="mt-2" style="color: #000000; margin-left;">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                           <p class="mt-1" style="margin-left: -70px;">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+	    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Box with Fixed Alignment</title>
+    <style>
+        .content-box {
+            border: 2px solid #ccc;
+            width: 300px;
+            padding: 20px;
+            margin: 20px auto;
+            text-align: center; /* Center align content */
+        }
 
-                        </div>
-                    </div>
+        .title {
+            color: #000000;
+            margin-left: auto; /* Set left margin to auto for center alignment */
+            margin-right: auto; /* Set right margin to auto for center alignment */
+        }
+
+        .paragraph {
+            margin-left: -70px; /* Adjust margin as needed */
+        }
+    </style>
+</head>
+<body>
+    <div class="col-lg-5" style="margin-right: 2%;">
+        <section class="blog py-4" id="Services" style="margin-right: 0%;">
+            <div class="container py-md-5" style="margin-top: 10px;">
+                <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">Services</h3>
+                <div class="draggable-box content-box">
+                    <h3 class="title mt-2">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
+                    <p class="paragraph mt-1">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+    </div>
+</body>
+
         <div class="col-lg-5">
 	<div class="row match-height">
            <head>
@@ -181,30 +203,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: 0%; margin-left: -3%;"> <!-- Adjusted inline style to include margin-left -->
-        <section class="blog py-4" id="Services" style="margin-right: 0%;"> <!-- Adjusted margin-right -->
-            <div class="container py-md-4" style="margin-top: 10px;"> <!-- Adjusted margin-top -->
-		        <div class="container py-md-3">
-                    <h3 class="heading mb-sm-3 mb-2 text-right">Services</h3>
-                    <div class="row core-grids justify-content-right">
-                        <div class="draggable-box">
-                            <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
-                            <a href="upload.html">    
-                                <div class="text">
-                                    <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
-                                    <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
-                                </div>
-                            </a>
+    <div class="col-lg-5" style="margin-right: 14%;"> <!-- Adjusted inline style to move 7 lines right -->
+        <section class="blog py-4" id="Services" style="margin-right: 0%;">
+    <div class="container py-md-5" style="margin-top: 10px;">
+        <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">Services</h3>
+                <div class="draggable-box">
+                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
+                    <a href="upload.html">    
+                        <div class="text">
+                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
+                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
     </div>
 </body>
-
-</body>
-    <!-- //Products & Services -->
 
     
 </body>
