--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
     <div class="col-lg-5" style="margin-right: 2%;">
-        <section class="blog py-4" id="Services" style="margin-right: 0%;">
-            <div class="container py-md-5" style="margin-top: 10px;">
-                <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">Services</h3>
-                <div class="draggable-box content-box">
-                    <h3 class="title mt-2">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                    <p class="paragraph mt-1">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+         <section class="blog py-4" id="About Us" style="margin-right: 0%;">
+    <div class="container py-md-5" style="margin-top: 10px;">
+        <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
+                <div class="draggable-box">
+                    <h3 class="title mt-3">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
+                    <p class="paragraph mt-2">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
                 </div>
             </div>
         </section>
@@ -203,7 +203,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: 14%;"> <!-- Adjusted inline style to move 7 lines right -->
+    <div class="col-lg-5" style="margin-right: 0%;"> <!-- Adjusted inline style to move 7 lines right -->
         <section class="blog py-4" id="Services" style="margin-right: 0%;">
     <div class="container py-md-5" style="margin-top: 10px;">
         <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">Services</h3>
