--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }
 
         .paragraph {
-            margin-left: -70px; /* Adjust margin as needed */
+            margin-left: -50px; /* Adjust margin as needed */
         }
     </style>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-right: 2%;">
-         <section class="blog py-4" id="About Us" style="margin-right: 0%;">
+    <div class="col-lg-5" style="margin-left: 2%;">
+         <section class="blog py-4" id="About Us" style="margin-left: 0%;">
     <div class="container py-md-5" style="margin-top: 10px;">
         <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
                 <div class="draggable-box">
