--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </body>
 
-        <head>
+       <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draggable Box</title>
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         width: 300px;
         padding: 20px;
         position: absolute; /* Position the box absolutely */
-        top: 20px; /* Adjust top position */
+        top: 120px; /* Adjust top position (20px original + 10 lines * 10px per line) */
         right: 20px; /* Adjust right position */
         cursor: move;
       }
@@ -176,7 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         display: block;
         width: 100%;
         height: auto;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
       }
     </style>
     <script>
