--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         width: 300px;
         padding: 20px;
         position: absolute; /* Position the box absolutely */
-        top: 240px; /* Adjust top position (320px original - 8 lines * 10px per line) */
-        left: 50%; /* Center the box horizontally */
-        transform: translateX(-50%); /* Adjust for centering */
+        top: 312px; /* Adjust top position (320px original - 8 lines * 10px per line) */
+        right: 20px; /* Adjust right position */
         cursor: move;
       }
       .draggable-box img {
@@ -208,9 +207,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body style="margin: 0; padding: 0;"> <!-- Adjusted margin and padding of the body -->
-    <div class="col-lg-5"> <!-- Removed inline styles -->
-        <section class="blog py-4" id="Services">
-            <div class="container py-md-5">
+    <div class="col-lg-5" style="position: absolute; top: 20px; right: 30px;"> <!-- Adjusted position of the container -->
+        <section class="blog py-4" id="Services" style="margin-right: 0%;">
+            <div class="container py-md-5" style="margin-top: 10px;">
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
@@ -224,7 +223,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </section>
     </div>
 </body>
-
 
 
     
