--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         width: 300px;
         padding: 20px;
         position: absolute; /* Position the box absolutely */
-        top: 312px; /* Adjust top position (320px original - 8 lines * 10px per line) */
+        top: 328px; /* Adjust top position (320px original + 4 lines * 10px per line) */
         right: 20px; /* Adjust right position */
         cursor: move;
       }
