--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          <section class="blog py-4" id="About Us" style="margin-left: 0%;">
     <div class="container py-md-5" style="margin-center: 10px;">
         <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
-                <div class="draggable-box">
                     <h3 class="title mt-3">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                    <p class="paragraph mt-5">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+                    <p class="paragraph mt-4">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
                 </div>
             </div>
         </section>
@@ -176,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         display: block;
         width: 100%;
         height: auto;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
       }
     </style>
     <script>
@@ -207,9 +206,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body style="margin: 0; padding: 0;"> <!-- Adjusted margin and padding of the body -->
-    <div class="col-lg-5" style="position: absolute; top: 20px; right: 30px;"> <!-- Adjusted position of the container -->
+    <div class="col-lg-5" style="position: absolute; center: 20px; right: 30px;"> <!-- Adjusted position of the container -->
         <section class="blog py-4" id="Services" style="margin-right: 0%;">
-            <div class="container py-md-5" style="margin-top: 10px;">
+            <div class="container py-md-5" style="margin-center: 10px;">
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
