--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         display: block;
         width: 100%;
         height: auto;
-        margin-bottom: 50px;
+        margin-bottom: 40px;
       }
     </style>
     <script>
@@ -206,9 +206,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 </head>
 <body style="margin: 0; padding: 0;"> <!-- Adjusted margin and padding of the body -->
-    <div class="col-lg-5" style="position: absolute; center: 20px; right: 30px;"> <!-- Adjusted position of the container -->
+    <div class="col-lg-5" style="position: absolute; right: 20px; right: 30px;"> <!-- Adjusted position of the container -->
         <section class="blog py-4" id="Services" style="margin-right: 0%;">
-            <div class="container py-md-5" style="margin-center: 10px;">
+            <div class="container py-md-5" style="margin-right: 10px;">
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
