--- a/index.html
+++ b/index.html
@@ -153,21 +153,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </body>
 
-       <head>
+      <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draggable Box</title>
     <style>
-      body {
-        position: relative; /* Set body to relative position */
-      }
-
       .draggable-box {
         border: 2px solid #ccc;
         width: 300px;
         padding: 20px;
         position: absolute; /* Position the box absolutely */
-        top: 520px; /* Adjust top position (320px original + 10 lines * 10px per line) */
+        top: 20px; /* Adjust top position */
         right: 20px; /* Adjust right position */
         cursor: move;
       }
@@ -175,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         display: block;
         width: 100%;
         height: auto;
-        margin-bottom: 40px;
+        margin-bottom: 10px;
       }
     </style>
     <script>
@@ -205,10 +201,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       });
     </script>
 </head>
-<body style="margin: 0; padding: 0;"> <!-- Adjusted margin and padding of the body -->
-    <div class="col-lg-5" style="position: absolute; right: 20px; right: 30px;"> <!-- Adjusted position of the container -->
+<body>
+    <div class="col-lg-5" style="margin-right: 0%;">
         <section class="blog py-4" id="Services" style="margin-right: 0%;">
-            <div class="container py-md-5" style="margin-right: 10px;">
+            <div class="container py-md-5" style="margin-top: 10px;">
                 <div class="draggable-box">
                     <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
                     <a href="upload.html">    
@@ -221,7 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </section>
     </div>
-</body>
+</body> 
 
 
     
