--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </body>
 
-      <head>
+     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draggable Box</title>
@@ -163,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         width: 300px;
         padding: 20px;
         position: absolute; /* Position the box absolutely */
-        top: 20px; /* Adjust top position */
+        top: 10px; /* Adjust top position to move 10 lines up */
         right: 20px; /* Adjust right position */
         cursor: move;
       }
@@ -217,7 +217,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </section>
     </div>
-</body> 
+</body>
+
 
 
     
