--- a/index.html
+++ b/index.html
@@ -168,26 +168,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         .title {
             color: #000000;
-            margin-left: auto; /* Set left margin to auto for center alignment */
+            margin-right: auto; /* Set left margin to auto for center alignment */
             margin-right: auto; /* Set right margin to auto for center alignment */
         }
 
         .paragraph {
-            margin-left: -50px; /* Adjust margin as needed */
+            margin-right: -50px; /* Adjust margin as needed */
         }
     </style>
 </head>
 <body>
-    <div class="col-lg-5" style="margin-left: 2%; margin-top: -100px;"> <!-- Adjusted margin-top to move content up by approximately 10 lines -->
-         <section class="blog py-4" id="About Us" style="margin-left: 0%;">
-    <div class="container py-md-5" style="margin-center: 10px;">
-        <h3 class="heading mb-sm-5 mb-4 text-center" style="color: blue;">About Us</h3>
-                    <h3 class="title mt-3">ADVANCING DERMATOLOGY,<br> ENRICHING LIVES,<br> IDENTIFYING SKIN DISEASES.<br></h3>
-                    <p class="paragraph mt-4">Utilizing machine learning, we offer solutions to predict and address various skin conditions. Our mission is to empower users with accurate predictions about their skin health.</p>
+    <div class="col-lg-5" style="margin-right: 0%;">
+        <section class="blog py-4" id="Services" style="margin-right: 0%;">
+            <div class="container py-md-5" style="margin-right: 10px;">
+                <div class="draggable-box">
+                    <img src="https://magazine.medlineplus.gov/images/uploads/main_images/_main_article_list/is-it-vitiligo.jpg" alt="Placeholder Image">
+                    <a href="upload.html">    
+                        <div class="text">
+                            <h4 style="font-weight: bold; color: black;">SKIN DISEASE DETECTION</h4>
+                            <p>Anticipate disease type, symptoms and preventive measures for minimizing its impact.</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
     </div>
 </body>
+
+
 
 </html>
